# llm-chess-imitation

./: main.py  pyproject.toml
minGPT/: setup.py
minGPT/minGPT.egg-info/: PKG-INFO  SOURCES.txt
minGPT/mingpt/: dataset.py
src/: lm_model.py
src/data_processing/: create_vocab_models.py  filter_data.py  parse_pgn.py
